--- a/build.gradle
+++ b/build.gradle
@@ -23,12 +23,21 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation "org.springframework.boot:spring-boot-starter-jdbc"
-
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly 'mysql:mysql-connector-java'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // 롬복
+    implementation 'org.projectlombok:lombok:1.18.20'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // 테스트 환경 롬복
+    testAnnotationProcessor('org.projectlombok:lombok')
+
+
+    runtimeOnly 'mysql:mysql-connector-java'
+
+
 
 
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation
