Docs(gitignore) : 테스트 환경의 properties 파일 추가

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ build/
 bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
+
+/test/resources/application.preperties
 application.properties
 
 ### IntelliJ IDEA ###
