--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,10 @@ dependencies {
     // jwt
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
+    // gson
+    implementation 'com.google.code.gson:gson:2.8.9'
+
+
 }
 
 tasks.named('test') {
